# delta2_lidar_rs

./: .gitignore  Cargo.toml  Cross.toml  MANIFEST.in  README.md  build.nix  build.rs  build.sh  build_aarch64.sh  clean.sh  delta2-lidar-py.nix  delta2-lidar-rs.nix  delta2-lidar.nix  derivation.nix  pyproject.toml  rerun-py.sh  result  setup.py  shell.nix  shell.sh  test-py.sh
delta2_lidar_py/: __init__.py
examples/: gaussian.py  icp.py  lidar-viz-rerun.rs  mprocs.yaml  rerun.rs  scan-matching.py  stream-rerun.py  stream-ros2.py
py-src/delta2_lidar/: __init__.py  __init__.pyi  delta2_lidar_py.pyi
python/delta2_lidar/: __init__.py
src/: lib.rs  lidar.rs  main.rs  protocol.rs
