[package]
name = "rust-lidar-serial-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(unix)".dependencies]
bitflags = ">=1.3.1, <2.1.0"
cfg-if = "1.0.0"
nix = { version = "0.26", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
libudev = { version = "0.3.0", optional = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
CoreFoundation-sys = "0.1.4"
IOKit-sys = "0.1.5"
mach2 = "0.4.1"

[target."cfg(windows)".dependencies]
regex = "1.5.5"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "cguid", "commapi", "errhandlingapi", "fileapi", "guiddef", "handleapi", "minwinbase",
    "minwindef", "ntdef", "setupapi", "winbase", "winerror", "winnt",
]

[dependencies]
assert_hex = "0.2.2"
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
serialport = "4.2.2"
