[package]
name = "delta2_lidar_rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "delta2_lidar"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[dependencies]
anyhow = "1.0.75"
assert_hex = "0.2.2"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serialport = { version = "4.2.2", default-features = false }
pyo3 = { version = "0.19.2", features = ["extension-module","generate-import-lib"] }

[dev-dependencies]
rerun = "0.8.1"

[build-dependencies]
pyo3-build-config = "*"
