# pyproject.toml
# this is used, via setuptools-rust, to build the python package.
# the old setup.py method has been removed.
[build-system]
requires = ["setuptools", "wheel", "setuptools-rust", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "delta2-lidar"
version = "0.1.0"

[tool.setuptools.packages]
# tells it to look inside the ./python/ folder,
# and find any __init__ files that denote a python package
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "delta2_lidar.delta2_lidar" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                                # but you can add a prefix to nest it inside of a Python package.
path = "Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted
py-limited-api = "auto"  # Default value, can be omitted